[tool.poetry]
name = "upm_version_compare"
version = "0.1.0"
description = ""
authors = ["Dennis Stengele <dennis@stengele.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
Flask-Mako = "^0.4"
requests-oauthlib = "^1.3.1"
Flask-Session = "^0.4.0"
PyJWT = "^2.4.0"
cryptography = "^36.0.2"
deepdiff = "^5.8.0"
gevent = "^21.12.0"
packaging = "^21.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run = "upm_version_compare.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
